--- a/package.json
+++ b/package.json
@@ -8,14 +8,5 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "chalk": "^5.0.1",
-    "chalk-animation": "^2.0.2",
-    "inquirer": "^9.0.1",
-    "ora": "^6.1.2"
-  },
-  "devDependencies": {
-    "@types/inquirer": "^8.2.1"
-  }
+  "license": "ISC"
 }
